<resources>
    <string name="app_name">Training ERP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="error_occurred">Failed to connect to the server. Please try again.</string>
    <string name="empty" />
    <string name="alert_button_ok">OK</string>
    <string name="alert_button_cancel">Cancel</string>
    <string name="progress_loading">Loading&#8230;</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="arrow_back">Back to activity</string>

    <!--School Id login-->
    <!---->
    <string name="school_id_login">School ID</string>

    <!--User login-->
    <!---->
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="forgot_content">No problems. Please enter your username and \n we\'ll reset the password for you.</string>
    <string name="sign_in">Sign In</string>
    <string name="institute_Id">Institute Id cannot be empty</string>
    <string name="enter_user_name">Username cannot be empty</string>
    <string name="enter_user_name_forgot">Username is required to reset your password!</string>
    <string name="enter_password">Password cannot be empty</string>
    <string name="enter_password_reset">Current password is required!</string>
    <string name="enter_new_password"> Enter new password</string>
    <string name="enter_confirm_password">Confirm the password please!</string>
    <string name="min_pass_length">Short passwords are easy to guess! Try one with at least 8 characters&#8230;</string>
    <string name="password_mismatch">Password doesn\'t match new password!</string>

    <!--Dashboard-->
    <!---->
    <string name="attendance">ATTENDANCE</string>
    <string name="class_test">HOMEWORKS/CLASS TESTS</string>
    <string name="exam">EXAMS &amp; RESULTS</string>
    <string name="time_table">TIMETABLE</string>
    <string name="events">EVENTS</string>
    <string name="students">STUDENTS</string>
    <string name="teachers">TEACHERS</string>
    <string name="parents">PARENTS</string>
    <string name="classes">CLASSES</string>
    <string name="result">RESULT</string>

    <string name="communication">CIRCULARS</string>

    <!--Side Menu Admin-->
    <!---->
    <string name="admin_side_menu_profile">Profile</string>
    <string name="admin_side_menu_students">Students</string>
    <string name="admin_side_menu_teachers">Teachers</string>
    <string name="admin_side_menu_parents">Parents</string>
    <string name="admin_side_menu_board_members">Board Members</string>
    <string name="admin_side_menu_attendance">Attendance</string>
    <string name="admin_side_menu_classes">Classes</string>
    <string name="admin_side_menu_exams">Examinations</string>
    <string name="admin_side_menu_results">Results</string>
    <string name="admin_side_menu_special_class">Special Class</string>
    <string name="admin_side_menu_events">Events</string>
    <string name="admin_side_menu_circulars">Circulars</string>
    <string name="admin_side_menu_fee_status">Fee Status</string>
    <string name="admin_side_menu_on_duty">On Duty</string>
    <string name="admin_side_menu_groups">Groups</string>
    <string name="admin_side_menu_leaves">Leaves</string>
    <string name="admin_side_menu_settings">Settings</string>
    <string name="admin_side_menu_sign_out">Sign Out</string>

    <!--Side Menu Teachers-->
    <!---->"", "", "", "", "",
    "", "", "", "", "", "", "",
    "", "", ""
    <string name="teacher_side_menu_attendance">Attendance</string>
    <string name="teacher_side_menu_homework_classtest">Homeworks/Class Tests</string>
    <string name="teacher_side_menu_sub">Substitution</string>
    <string name="teacher_side_menu_spl_class">Special Class</string>
    <string name="teacher_side_menu_exam_and_result">Exams &amp; Results</string>
    <string name="teacher_side_menu_exam_duty">Exam Duty</string>
    <string name="teacher_side_menu_timetable">Timetable</string>
    <string name="teacher_side_menu_events">Events</string>
    <string name="teacher_side_menu_circulars">Circulars</string>
    <string name="teacher_side_menu_stud">Student Info</string>
    <string name="teacher_side_menu_on_duty">On Duty</string>
    <string name="teacher_side_menu_groups">Groups</string>
    <string name="teacher_side_menu_apply_leave">Apply Leave</string>
    <string name="teacher_side_menu_settings">Settings</string>
    <string name="teacher_side_menu_sync">Sync</string>
    <string name="teacher_side_menu_signout">Sign Out</string>

    <!--Edit Profile-->
    <!---->

    <!--Create or Review Test-->
    <!---->

    <!--Group Notification-->
    <!---->
    <string name="group_title">Group title cannot be empty</string>
    <string name="group_admin">Please choose an admin!</string>


    <!--Custom calendar view-->
    <!---->

    <string-array name="attendance">
        <item>Present</item>
        <item>Leave</item>
        <item>Absent</item>
        <item>OD</item>
    </string-array>

    <!--live-->
    <!--live-->

    <!--academic_exam_detail_views_list_item-->
    <string name="set_date_text">12&#8211;12&#8211;2012</string>
    <!---->

    <!--academic_exam_only_total_result_list_item-->
    <string name="set_text">name</string>
    <!---->

    <!--academic_exam_only_total_result_view-->
    <string name="title_exam_result">Exam Result</string>
    <string name="title_student_name">Student Name</string>
    <string name="title_total">Total</string>
    <!---->

    <!--academic_exam_result_list_item-->
    <string name="student_name">Siva Bala Murali Krishna</string>
    <string name="student_grade">B1</string>
    <string name="student_mark">100</string>
    <!---->

    <!--academic_exam_result_view-->
    <string name="title_internal">Internal</string>
    <string name="title_external">External</string>
    <!---->

    <!--academic_exams_list_view-->
    <string name="title_exam_name">Exam Name</string>
    <string name="title_exam_date">Exam date</string>
    <string name="hyphen">&#8211;</string>
    <!---->

    <!--activity_academic_exam_details-->
    <string name="title_date">Date</string>
    <string name="title_time">Time</string>
    <string name="title_subject">Subject</string>
    <string name="title_mark">Mark</string>
    <!---->

    <!--activity_academic_exam_view_activity-->
    <string name="title_academic_exams">Academic Exams</string>
    <!---->

    <!--activity_add_academic_exam_marks-->
    <string name="title_exam_mark_entry">Exam Mark entry</string>
    <!---->


    <string name="about_content">The endeavour of managing schools and colleges isn’t easy. Connecting the stakeholders – the administration, teachers, students and parents is a time-consuming process and can gobble up a lot of time. This we seek to ease. ERP is a solution that aims to simplify administrative and managerial process of schools and colleges, which include gathering, storing and processing information. The integrated web and mobile applications connect teachers with students and parents for a seamless productivity round the clock. ERP is a culmination of our deep understanding of how educational institutions work and the blending of relevant technologies for delivering a world-class product.</string>

    <!-- SyncAdapter related -->
    <string name="sync_account_type">com.edu.erp</string>
    <string name="content_authority">com.edu.erp.syncadapter</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>

</resources>
