<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appColor"
            android:minHeight="?android:attr/actionBarSize" />


        <ImageView
            android:id="@+id/back_res"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/arrow_back"
            android:minHeight="?android:attr/actionBarSize"
            android:padding="5dp"
            android:src="@drawable/ic_arrow_back_white_48dp" />

        <TextView
            android:id="@+id/tvtitletext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/back_res"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:minHeight="?android:attr/actionBarSize"
            android:text="@string/title_exam_result"
            android:textColor="@color/white"
            android:textSize="@dimen/menuTextSize"
            android:textStyle="bold" />


        <ImageView
            android:id="@+id/edit_mark"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/title_exam_mark_entry"
            android:minHeight="?android:attr/actionBarSize"
            android:padding="13dp"
            android:visibility="gone"
            android:src="@drawable/ic_edit" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="50dp">

        <LinearLayout
            android:id="@+id/llTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/new_gray"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_weight="0.5"
                android:background="@color/new_gray"
                android:gravity="center"
                android:text="@string/title_student_name"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.5"
                android:background="@color/new_gray"
                android:gravity="center"
                android:text="@string/title_total"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/listView_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llTitle"
            android:layout_marginBottom="1dp" />

    </RelativeLayout>

</LinearLayout>