<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="6dp"
        android:background="@drawable/shadow_round">

        <TextView
            android:id="@+id/txtExamName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/title_exam_name"
            android:textAllCaps="true"
            android:textColor="@color/appColor"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtFromDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtExamName"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/title_exam_date"
            android:textColor="@color/new_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/hyphen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/txtFromDate"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/txtFromDate"
            android:layout_toRightOf="@+id/txtFromDate"
            android:text="@string/hyphen"
            android:textColor="@color/new_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtToDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtExamName"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/hyphen"
            android:layout_toRightOf="@+id/hyphen"
            android:text="@string/title_exam_date"
            android:textColor="@color/new_gray"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtExamIdLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtExamName"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/hyphen"
            android:layout_toRightOf="@+id/hyphen"
            android:textColor="@color/appColor"
            android:textSize="15sp"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_below="@+id/txtExamName"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/txtFromDate"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/ic_date" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/txtExamName"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/arrow_back"
            android:src="@drawable/ic_circle_with_right_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_1"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/txtExamIdLocal" />

        <ImageView
            android:id="@+id/imgStatus"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_tick"
            android:padding="2dp"
            android:layout_marginLeft="10dp"
            android:layout_alignTop="@+id/status"
            android:layout_alignBottom="@+id/status"/>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_below="@+id/txtExamIdLocal"
            android:layout_toRightOf="@+id/imgStatus"
            android:textColor="@color/new_gray"
            android:text="Completed"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    </RelativeLayout>

</LinearLayout>